<resources>
    <string name="app_name">MonicaVillanueva-Block3-Quiz</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="calculate">Calculate</string>
    <string name="bmi_calculator">BMI Calculator</string>
    <string name="height_cm">Height (cm)</string>
    <string name="weight_kg">Weight (kg)</string>
    <string name="kg">kg</string>
    <string name="cm">cm</string>
    <string name="done">Done</string>
    <string name="_000">000</string>
    <string name="result">Result</string>
</resources>