<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="200dp"
    android:layout_gravity="center"
    app:cardCornerRadius="10dp"
    app:cardElevation="3dp"
    tools:ignore="TextSizeCheck">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/fredokasemibold"
            android:text="@string/result"
            android:textSize="30sp"

            />

        <TextView
            android:id="@+id/tv_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/fredokaregular"
            android:text="@string/_000"
            android:textSize="40sp"
            tools:ignore="TextSizeCheck" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_done"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/done"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/roundborder"
            android:backgroundTint="#3A98B9"
            android:textColor="@color/white"
            android:fontFamily="@font/fredokasemibold"
            />



    </LinearLayout>

</androidx.cardview.widget.CardView>